[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -10,7 +10,8 @@
         <br>
         <div class="center text-big bold">
             Hi! I am your webapp.<br/>
-            This is code
+            This is code<br/>
+            Testing
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
