--- a/ui/index.html
+++ b/ui/index.html
@@ -11,7 +11,7 @@
         <div class="center text-big bold">
             Hi! I am your webapp.<br/>
             This is code<br/>
-            Testing
+            Testing123
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
