[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -10,8 +10,7 @@
         <br>
         <div class="center text-big bold">
             Hi! I am your webapp.<br/>
-            This is code<br/>
-            Testing123
+            This is shown by HTML<br/>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
