[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -11,6 +11,7 @@
         <div class="center text-big bold">
             Hi! I am your webapp.<br/>
             This is shown by HTML<br/>
+            This is a random test<br/>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
