--- a/ui/index.html
+++ b/ui/index.html
@@ -9,9 +9,7 @@
         </div>
         <br>
         <div class="center text-big bold">
-            Hi! I am your webapp.<br/>
-            This is shown by HTML<br/>
-            Migrated to GKE<br/>
+            This is insane
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
